# langgraph-exercises

./: .env.example  .gitignore  CLAUDE.md  README.md  dockerfile.docker  evaluate.py  langgraph.json  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: CONFIGURATION.md  DEPENDENCY_MANAGEMENT.md  EVALUATION_GUIDE.md  LANGGRAPH_DEPLOYMENT.md  LANGSMITH_DEPLOYMENT_ANALYSIS.md  Travel Agent System Analysis and Attack Scenario Design Evals.md  Travel Agent System Analysis and Attack Scenario Design.md
prompts/: README.md  airline_assistant_prompt.json
src/: airline_chatbot_evaluation.py  config.py  graph.py  simulation_utils.py
src/agents/: __init__.py  assistant.py  red_team_user.py
src/deployment/: __init__.py  graph.py
src/evaluation/: __init__.py  evaluator.py  models.py
src/evaluation/execution/: __init__.py  base.py  local.py  remote.py
src/orchestration/: __init__.py  simulator.py
src/prompts/: red_team_user_prompt.json
src/utils/: __init__.py  message_converters.py
